Refactore the code in a way that that my static website is now run using nodejs. Improved the MVC arhitecture for future improvments on the front-end.

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -688,7 +688,7 @@ body {
     padding-bottom: 20px;
     background-color: dimgrey;
     color: white;
-    background-color: 
+    /*background-color: */ 
 }
 .footer .copyright h6{
     text-align: center;
