--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,30 +1,5 @@
-<!doctype html>
-<html lang="en">
-    
-    <head>
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <!-- bootstrap css -->
-        <link ref="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        
-        <!-- regular css -->
-        <link rel="stylesheet" type="text/css" href="css/homepage.css">
-        
-        <!-- font awesome library css -->
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/all.css">
 
-        <!-- animate css -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <link rel="stylesheet" href="css/animate.css"/>
-        
-        <!-- google fonts css -->
-        <link href="https://fonts.googleapis.com/css2?family=Alata&family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
-        
-    </head>
+    <%- include('includes/header') %>
     
     <body>
         
@@ -621,40 +596,6 @@
         
         </section>
         
-        <footer class="footer">
-            
-            <div class="container">
-                
-                <div class="row">
-                    
-                    <div class="col-md-12 copyright">
-                        
-                        <h6>Copyrights &copy; Joseph Maary</h6>
-                    
-                    </div>
-                
-                    <div class="col-md-12 copyright">
-                    
-                        <h6>josephmaary@outlook.com</h6>
-                    
-                    </div>
-                    
-                </div>
-            
-            </div>
+        <%- include('includes/footer') %>
         
-        </footer>
-        
-        <!-- Bootstrap JavaScript -->
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        
-        <!-- Add wow js lib -->
-        <script src="js/wow.min.js"></script>
-        <script> new WOW().init(); </script>
-        <!-- Custom Js -->
-        <script src="js/background-slideshow.js"></script>
-        
-    </body>
     
-</html>
