--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,17 +5,19 @@
         
         <header class="header">
             <div class="header-overlay">
-                <div class="header-title wow slideInDown">
+                <div class="header-title wow fadeIn" data-wow-duration="4s" >
                     <p>Joseph Maary</p>
                 </div>
-                <div class="header-caption wow slideInUp">
+                <div class="header-caption wow fadeIn" data-wow-duration="3s" data-wow-delay="0.8s">
                     <p>Where intentions meet success</p>
                 </div>
                 <div class="header-button">
-                    <button class="btn btn-tour wow slideInLeft" data-wow-duration="3">TAKE PROFILE TOUR</button>
+                    <input type="text" class="input-insert-name wow fadeIn" onkeyup="this.value = this.value.toUpperCase();" autofocus="autofocus" placeholder="ENTER YOUR NAME HERE" data-wow-delay="1.5s">
+                    <button class="btn-tour wow fadeIn" data-wow-duration="4s" data-wow-delay="1.5s">TAKE PROFILE TOUR</button> 
                     <!--
+                    <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
                     <button href="#headerPopup" id="headerVideoLink" class="btn btn-introVideo popup-modal wow slideInRight" data-wow-duration="3">WATCH INTRO VIDEO</button>
-                    -->
+                    -->      
                 </div>
             </div>
             
