Added some extra packages

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -32,7 +32,12 @@
 
 <!-- Custom Js -->
 <script src="js/background-slideshow.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+<script>
+	document.addEventListener( 'DOMContentLoaded', function () {
+		new Splide( '.splide' ).mount();
+	} );
+</script>
 </body>
     
 </html>
