--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-        
+    
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,4 +27,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
     
+    <!-- splide links -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-default.min.css,npm/@splidejs/splide@2.4.21/dist/css/themes/splide-sea-green.min.css,npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-default.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-sea-green.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
 </head>
