--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -66,7 +66,7 @@
             <div class="container choices-container">
                 
                 <!-- education choice divison -->
-                <div class="row choice-education wow slideInLeft">
+                <div class="row choice-education wow slideInLeft" data-wow-duration="2s" data-wow-delay="">
                     <div class="col-md-10 offset-md-1">
                             <h1>
                             Education History
@@ -76,7 +76,7 @@
                 </div>
                 
                 <!-- work experience choice divison -->
-                <div class="row choice-work wow slideInLeft " data-wow-delay="0.1s">
+                <div class="row choice-work wow slideInLeft " data-wow-duration="2s" data-wow-delay="0.2s">
                     <div class="col-md-10 offset-md-1">
                             <h1>
                             Work Experience
@@ -86,7 +86,7 @@
                 </div>
                 
                 <!-- personal information choice divison -->
-                <div class="row choice-personal wow slideInLeft " data-wow-delay="0.2s">
+                <div class="row choice-personal wow slideInLeft " data-wow-duration="2s" data-wow-delay="0.4s">
                     <div class="col-md-10 offset-md-1">
                             <h1>
                             Personal Information
