--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -22,6 +22,8 @@
 
 </footer>
 
+</body>
+
 <!-- Bootstrap JavaScript -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -31,13 +33,12 @@
 <script> new WOW().init(); </script>
 
 <!-- Custom Js -->
-<script src="js/background-slideshow.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
-<script>
-	document.addEventListener( 'DOMContentLoaded', function () {
-		new Splide( '.splide' ).mount();
-	} );
-</script>
-</body>
-    
+<script src="js/section-header.js"></script>
+<script src="js/section-choices.js"></script>
+<script src="js/section-work-experience.js"></script>
+<script src="js/section-personal.js"></script>
+<script src="js/section-certificates.js"></script>
+<script src="js/section-footer.js"></script>
+
+
 </html>
