--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -28,8 +28,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
     
     <!-- splide links -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-default.min.css,npm/@splidejs/splide@2.4.21/dist/css/themes/splide-sea-green.min.css,npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-default.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-sea-green.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
